fix: solve layout problem on search page.

--- a/src/app/search/components/nutrient-table/index.css
+++ b/src/app/search/components/nutrient-table/index.css
@@ -1,3 +1,15 @@
+
+.food-list {
+    display: flex;
+    flex-direction: column;
+    width: 71%;
+    margin-right: 10px;
+    flex-basis: 100%;
+    padding: 20px;
+    background-color: rgb(214, 226, 218);
+    border-radius: 10px;
+}
+
 @media screen and (max-width: 768px) {
     .content-table-foods,
     .content-table-foods thead,
@@ -31,5 +43,11 @@
 
     .content-table-foods tr {
         margin-bottom: 12px;
+    }
+}
+@media screen and (max-width: 992px) {
+    .food-list {
+        width: 100%;
+        max-width: 100%;
     }
 }
