--- a/src/app/search/search.module.css
+++ b/src/app/search/search.module.css
@@ -5,10 +5,17 @@
     flex-direction: row;
     align-items: flex-start;
 }
+.filter-body-container {
+    width: 35%;
+}
 
 @media screen and (max-width: 992px) {
     .search-container {
         flex-direction: column;
         align-items: stretch;
     }
+    .filter-body-container {
+        width: 100%;
+    }
 }
+
