--- a/src/assets/css/_searchPage.css
+++ b/src/assets/css/_searchPage.css
@@ -1,24 +1,1 @@
 
-.food-list {
-  display: flex;
-  flex-direction: column;
-  width: 71%;
-  margin-right: 10px;
-  flex-basis: 100%;
-  padding: 20px;
-  background-color: rgb(214, 226, 218);
-  border-radius: 10px;
-}
-
-@media screen and (max-width: 992px) {
-
-  .food-filter{
-    flex: none;
-    width: 100%;
-    max-width: 100%;
-  }
-  .food-list {
-    width: 100%;
-    max-width: 100%;
-  }
-}
